--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "jest": "^30.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "babel-jest": "^30.2.0"
   }
 }
